# silver-garbanzo

./: .gitignore  README.md  pyproject.toml
.github/: copilot_instructions.md  pull_request_template.md
.github/workflows/: ci.yml
config/: overrides.csv  rules.json  splits.csv
data/sample/: README.md  checking__2026-01-15__2026-02-14.csv  checking__2026-01-unknown-type.csv  checking__2026-01.csv  checking__2026-01.csv.out_of_range  checking__2026-01.csv.overlap
docs/: copilot_instructions.md  data-layout.md  dev_workflow.md  epics.md  esod.md  prd.md  pull_request_template.md  run-log.md  technical_requirements.md
docs/decisions/: 0000-adr-template.md  0001-use-poetry-and-ruff.md  0002-correctness-first-ingest.md  0003-filename-date-range-contract.md  0004-range-registry.md  0005-local-single-user.md  README.md  context.yml
src/silver_garbanzo/: cli.py  config_validation.py  contracts.py  ingest.py  overlap.py
tests/: test_config_validation.py  test_contracts.py  test_dry_run.py  test_headers.py  test_overlap.py  test_profile_mode.py  test_sample_data.py  test_smoke.py
