[tool.poetry]
name = "silver-garbanzo"
version = "0.1.0"
description = "Local CLI tool to ingest bank CSV exports, validate strict date ranges, categorize deterministically, and report spend/income by period."
authors = ["jeisenback <jeisenback@gmail.com>"]
readme = "README.md"
packages = [{ include = "silver_garbanzo", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
