[project]
name = "silver-garbanzo"
version = "0.1.0"
description = "Local CLI tool to ingest bank CSV exports, validate strict date ranges, categorize deterministically, and report spend/income by period."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "jeisenback", email = "jeisenback@gmail.com" }]
dependencies = [
  "pandas>=2.2,<3.0",
]

[tool.poetry]
packages = [{ include = "silver_garbanzo", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<9"
ruff = ">=0.6,<1.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
